<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.scorpio92.asl_monitor.ASLImageFOPS"
    android:background="@android:color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fops_help"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fff80300"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:id="@+id/scrollView3"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy_asl_title"
            android:id="@+id/textView10"
            android:textColor="#ff0ac803"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </ScrollView>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_but"
        android:id="@+id/button4"
        android:background="@android:color/black"
        android:clickable="true"
        android:onClick="checkClick"
        android:textColor="#ff0ac803"
        android:gravity="center|left"
        android:layout_below="@+id/scrollView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_but"
        android:id="@+id/button5"
        android:gravity="center"
        android:background="@android:color/black"
        android:clickable="true"
        android:onClick="removeClick"
        android:textColor="#ff0ac803"
        android:layout_alignTop="@+id/button4"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:textColor="#ff0ac803"
        android:text="@string/copy_but"
        android:onClick="copyClick"
        android:gravity="center|right"
        android:clickable="true"
        android:background="@android:color/black"
        android:layout_alignTop="@+id/button5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
