<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ASL_Image"
    android:background="@android:color/black">
<ScrollView
    android:layout_height="110dp"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    tools:context=".ASL_Image"
    android:id="@+id/scrollView2"
    android:layout_above="@+id/textView7"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff0ac803"
        android:id="@+id/textView6"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:text="@string/copy_asl_title"
        android:gravity="left|top" />
</ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fix_it"
        android:id="@+id/textView7"
        android:textColor="#fff80300"
        android:textSize="36sp"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="fixClick"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_help"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#fff80300"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

</RelativeLayout>